tcc/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: a.localhost
    http:
      paths:
        - path: /account
          pathType: Prefix
          backend:
            service:
              name: account-svc
              port:
                number: 8080
        - path: /card
          pathType: Prefix
          backend:
            service:
              name: card-svc
              port:
                number: 8080
        - path: /customer
          pathType: Prefix
          backend:
            service:
              name: customer-svc
              port:
                number: 8080
        - path: /loan
          pathType: Prefix
          backend:
            service:
              name: loan-svc
              port:
                number: 8080
